Update comment function

--- a/static/detail/10/history.txt
+++ b/static/detail/10/history.txt
@@ -1,1 +1,1 @@
-Phố Phùng Hưng dài 1250m, đi qua ba phường Hàng Mã, Cửa Đông, Hàng Bông; là ranh giới giữa khu phố cổ và thành Hà Nội. Đoạn trên có 2 nhánh rẽ từ đầu các phố Phan Đình Phùng và Hàng Lược, đoạn dưới cắt qua các phố Hàng Vải, Cửa Đông, Đường Thành, Bát Đàn, Nguyễn Quang Bích, Nguyễn Văn Tố, Ngõ Trạm, Hà Trung rồi ra Hàng Bông. Phố dài 1250m, từ năm 1945 mang tên anh hùng Phùng Hưng (761-802, di tích lăng mộ ngài nay vẫn còn ở đầu phố Giảng Võ). Đoạn phố thẳng chính là dấu vết của bức tường gạch vồ và con hào phòng thủ ở phía đông thành Hà Nội cũ. Đoạn trên có 2 nhánh rẽ từ đầu các phố Phan Đình Phùng và Hàng Lược kéo đến cầu sắt chỗ phố Lê Văn Linh bây giờ. Khu ngoài con hào vốn thuộc địa phận thôn Tân Khai được lập trên khoảng đất thừa ra vào đầu thế kỷ 19 khi triều Nguyễn thu hẹp thành Thăng Long xưa để xây một tòa thành nhỏ hơn theo kiểu Vauban. Thực dân Pháp sang chiếm Hà Nội rồi cho lấp hào và phá tường để lấy vật liệu xây dựng vào năm 1896-1897. Trên nền đó lại xây đường dốc cho xe lửa lên cầu Long Biên và một phố dài, đặt tên là Boulvard Henri d’Orléans, tức Phùng Hưng sau này. Trong thực tế hàng chục năm tiếp theo phố vẫn chưa được hoàn chỉnh. Cho đến khoảng giữa thập niên 1920, nhà cửa mới mọc lên chủ yếu ở những đoạn ngắn tại hai đầu phố.
+Phố Phùng Hưng dài 1250m, đi qua ba phường Hàng Mã, Cửa Đông và Hàng Bông, là ranh giới giữa khu phố cổ và thành Hà Nội. Từ năm 1945, phố mang tên anh hùng Phùng Hưng. Đoạn phố thẳng là dấu vết của bức tường gạch và con hào phòng thủ phía đông thành Hà Nội cũ. Thực dân Pháp đã lấp hào và phá tường để xây dựng đường vào năm 1896-1897. Phố Phùng Hưng ngày nay, với hai nhánh rẽ từ phố Phan Đình Phùng và Hàng Lược, từng được gọi là Boulvard Henri d’Orléans, và phát triển dần từ giữa thập niên 1920.
