--- a/static/detail/12/history.txt
+++ b/static/detail/12/history.txt
@@ -1,1 +1,1 @@
-Đền Ngọc Sơn thuộc cụm di tích Hồ Hoàn Kiếm, là ngôi đền thờ vị anh hùng dân tộc Hưng Đạo Đại Vương Trần Quốc Tuấn và thần chủ quản công danh Văn Xương Đế Quân. Bên cạnh đó, đây cũng là nơi thờ Phật, ban Công Đồng,... Qua việc thờ cúng cùng với phong cách kiến trúc, hệ thống câu đối, hoành phi và cách bài trí của đền Ngọc Sơn đã thể hiện rõ nét quan niệm Tam giáo đồng nguyên (Phật giáo, Đạo giáo, Nho giáo) của người dân Việt Nam khi xưa. Khởi nguyên, vào thời điểm vua Lý Thái Tổ dời kinh đô ra Thăng Long đã đặt tên cho ngôi đền là Ngọc Tượng, cho tới đời Trần đổi thành Ngọc Sơn, là nơi thờ những người anh hùng liệt sĩ đã hy sinh khi chiến đấu chống quân Nguyên - Mông bảo vệ Tổ quốc. Ít lâu sau, ngôi đền sụp đổ. Ở triều vua Vĩnh Hựu đời nhà Lê, chúa Trịnh Giang đã cho xây dựng cung Khánh Thụy, đồng thời đắp hai quả núi đất nằm trên bờ phía Đông, đối diện với Đền Ngọc Sơn. Cuối đời nhà Lê, Cung Khánh Thụy bị phá hủy một phần và được người dân làng Tả Khánh phục dựng lại, gọi tên là đền Khánh Thụy nằm hướng ra đền Ngọc Sơn. Sau một thời gian, nhà từ thiện có tên Tín Trai đã dựng nên chùa Ngọc Sơn tại vị trí của cung Khánh Thụy trước đây. Tiếp đó, ngôi chùa lại được nhượng cho một hội từ thiện khác, đổi làm đền thờ Tam Thánh. Hội đã quyết định bỏ gác chuông, tu sửa lại các gian điện chính, phòng ốc và đặt tượng Văn Xương Đế Quân tại đây, lấy tên là đền Ngọc Sơn. 
+Đền Ngọc Sơn, nằm trong cụm di tích Hồ Hoàn Kiếm, thờ Hưng Đạo Đại Vương Trần Quốc Tuấn và thần chủ quản công danh Văn Xương Đế Quân. Đây cũng là nơi thờ Phật và ban Công Đồng, thể hiện rõ nét quan niệm Tam giáo đồng nguyên (Phật giáo, Đạo giáo, Nho giáo) của người Việt xưa. Ban đầu, đền có tên Ngọc Tượng vào thời vua Lý Thái Tổ và sau đổi thành Ngọc Sơn thời Trần. Qua nhiều biến cố, đền được xây dựng lại và đổi tên nhiều lần, cuối cùng được đổi thành đền Ngọc Sơn, nơi thờ Tam Thánh, do một hội từ thiện dựng nên.
