--- a/static/detail/15/history.txt
+++ b/static/detail/15/history.txt
@@ -1,1 +1,1 @@
-Khu “36 phố phường" Hà Nội ra đời cùng với hoàng thành Thăng Long từ thế kỷ XI đời Lý. Khu thị dân cổ này nằm ở phía đông và đông bắc thành cổ trong gần 10 thế kỷ đã chứng kiến biết bao sự kiện lịch sử hào hùng của dân tộc trong sự nghiệp chống ngoại xâm giữ nền độc lập cho nước nhà. Khu phố cổ này, cùng với sông Hồng, là khu bảo vệ vòng ngoài cho thành cổ trong thời chiến, là khu vực buôn bán sầm uất nuôi sống thành cổ trong thời bình, là gương mặt của đất nước trong quan hệ đối ngoại. Khu “36 phố phường" trước năm 1954 theo thống kê có 115 công trình tôn giáo tín ngưỡng, tới nay hiện còn 54 ngôi đình, 6 chùa, 22 đền, 3 miếu, tổng cộng là 85 công trình phân bố trên khu vực gần 100ha. Có thể nói là mật độ công trình tôn giáo tín ngưỡng ở khu phố cổ thuộc loại cao. Nhiều công trình có niên đại khởi dựng từ thế kỷ XI cùng thời đặt móng xây dựng thành Thăng Long. Các công trình tôn giáo tín ngưỡng ở khu phố cổ thuộc loại cao. Nhiều công trình có niên đại khởi dựng từ thế kỷ XI cùng thời đặt móng xây dựng thành Thăng Long. Các công trình tôn giáo tín ngưỡng này là không gian tâm linh mang tính cộng đồng, nó có mối quan hệ vô hình với các không gian tâm linh riêng của từng ngôi nhà trong khu vực. Các không gian văn hoá tâm linh này vẫn đang tồn tại, góp phần tạo hồn cho khu phố cổ. 
+Khu “36 phố phường" Hà Nội ra đời cùng hoàng thành Thăng Long từ thế kỷ XI đời Lý, nằm ở phía đông và đông bắc thành cổ. Trong gần 10 thế kỷ, khu phố này đã chứng kiến nhiều sự kiện lịch sử, vừa bảo vệ thành cổ trong thời chiến, vừa là khu vực buôn bán sầm uất trong thời bình. Trước năm 1954, khu phố cổ có 115 công trình tôn giáo, hiện còn 54 đình, 6 chùa, 22 đền, và 3 miếu trên diện tích gần 100ha. Những công trình này, nhiều từ thế kỷ XI, tạo không gian tâm linh cộng đồng, góp phần tạo nên hồn của khu phố cổ.
