--- a/static/detail/17/history.txt
+++ b/static/detail/17/history.txt
@@ -1,1 +1,1 @@
-Nhà thờ lớn Hà Nội được xây dựng trên nền chùa Báo Thiên, ngôi cổ tự thời nhà Lý. Đến thế kỷ 18, chùa bị hủy hoại nặng nề, tàn tích trở thành nơi họp chợ của người dân thời ấy. Sau này, Nhà thờ lớn Hà Nội được cấp phép xây dựng trên chính nền đất cũ. Năm 1884, Giám mục Puginier tiến hành thiết kế và cho khởi công xây dựng Nhà thờ lớn Hà Nội, đến Giáng sinh năm 1887 thì khánh thành. Ban đầu, nhà thờ được xây dựng tạm bợ bằng gỗ, sau đó trải qua đợt đại trùng tu, sử dụng gạch và trát bê tông chắc chắn như ngày nay. Được ví von là phiên bản thu nhỏ của Nhà thờ Đức Bà Paris, Nhà thờ lớn Hà Nội đã trở thành hình ảnh biểu trưng cho phố cổ, trở thành điểm tham quan thu hút nhiều người.
+Nhà thờ lớn Hà Nội được xây dựng trên cơ sở của chùa Báo Thiên, một ngôi cổ tự từ thời nhà Lý. Đến thế kỷ 18, chùa này bị hủy hoại nặng nề và trở thành nơi họp chợ của người dân. Sau đó, Nhà thờ lớn Hà Nội được phép xây dựng trên nền đất cũ của chùa. Vào năm 1884, Giám mục Puginier đã thiết kế và khởi công xây dựng, và đến Giáng sinh năm 1887, nhà thờ được khánh thành. Ban đầu, nó được xây tạm bợ bằng gỗ, sau đó trải qua đợt đại trùng tu, sử dụng gạch và bê tông chắc chắn như ngày nay. Với sự tương đồng với Nhà thờ Đức Bà Paris, Nhà thờ lớn Hà Nội đã trở thành biểu tượng của phố cổ và là điểm tham quan thu hút nhiều du khách.
