--- a/static/detail/18/history.txt
+++ b/static/detail/18/history.txt
@@ -1,1 +1,1 @@
-Theo điều 9 của Công ước ngày 6-2-1874 và điều khoản phụ kèm, người Pháp được triều đình Huế nhường cho một khoảng đất trên bờ sông Hồng để xây dựng chỗ ở cho Công sứ và đội hộ vệ với diện tích là 5 mẫu (2,5 ha)[2]. Đó là một khoảng đất rộng hình chữ nhật nằm dọc, có các cạnh dài hai bên là con đê trong (nay là các phố Lê Thánh Tông và Trần Thánh Tông) và bờ sông Hồng; các cạnh ngắn là các con đường được đắp cao (ngày nay là đoạn đầu phố Tràng Tiền cho đến phố Nguyễn Công Trứ). Tháng 10-1875, Pháp bắt đầu khởi công xây dựng các công trình kiên cố trên khu nhượng địa, với một con đường đi xuyên dọc trong khu sau này trở thành phố Nhượng địa (rue de la Concession) và nay là phố Phạm Ngũ Lão. Để thực hiện mục đích xây dựng Hà Nội thành một thành phố châu Âu, việc đầu tiên mà chính quyền thuộc địa Pháp làm là mở một con đường nối khu nhượng địa với khu vực Trường Thi và Hoàng thành cũ. Con đường này sau đã trở thành các phố đầu tiên ở Hà Nội được xây dựng theo tiêu chuẩn châu Âu, bao gồm 3 phố: Pháp Quốc, Paul Bert, Borgnis Desbordes,
+Theo Công ước ngày 6-2-1874, triều đình Huế nhượng đất ven sông Hồng cho Pháp để xây nhà cho Công sứ và đội hộ vệ, với diện tích 5 mẫu (tương đương 2,5 ha). Pháp bắt đầu xây dựng vào tháng 10-1875, mở một con đường dọc khu đất này, sau trở thành phố Nhượng địa (rue de la Concession). Để biến Hà Nội thành một thành phố châu Âu, Pháp mở đường nối khu Nhượng địa với Trường Thi và Hoàng thành cũ. Những con đường này sau này trở thành những phố đầu tiên ở Hà Nội theo tiêu chuẩn châu Âu, bao gồm Phố Pháp Quốc, Paul Bert, Borgnis Desbordes.
