--- a/static/detail/20/history.txt
+++ b/static/detail/20/history.txt
@@ -1,1 +1,1 @@
-Theo những gì trong tư liệu ghi lại, người đứng ra chủ trì xây dựng chùa là Tổng đốc Hà Ninh - Nguyễn Văn Giai. Ông là người của làng Phù Chánh, Quảng Bình, xuất thân trong một gia đình danh giá, thân phụ là thầy dạy học của Vua Thiệu Trị. Ông là vị danh thần có nhiều công lao dưới thời Vua Thiệu Trị. Đến năm 1846 khi đang cương vị Tổng đốc Hà Ninh, ông đã đứng ra quyên tiền xây dựng chùa Báo Ân có quy mô hoành tráng. Có thể nói chùa Báo Ân sau khi hoàn thành đã trở thành công trình bề thế nhất Hà Nội thời bấy giờ. Và Tháp Hòa Phong là phần kiến trúc sót lại của chùa Báo Ân. Dựa vào bản vẽ ban đầu lưu lại, chùa có kiến trúc vô cùng độc đáo và được xây dựng trong một khuôn viên lớn, con đường ven hồ ở phía Đông dẫn đến ngọn Tháp Hòa Phong, tiếp theo đó là cổng chùa, đi qua chiếc cầu đúc sẽ đến lầu Hộ Pháp với hai bên là 4 ngọn tháp cao 3 tầng đối xứng với nhau. Ngày xưa bên trong và xung quanh chùa có trồng rất nhiều sen nên chùa còn có tên là Liên Trì. Có nhiều tài liệu ghi lại sự kiện ngôi chùa bị phá hủy nhưng ngày tháng không đồng nhất. Có tài liệu ghi lại là vào tháng 11 năm 1885, viên Toàn quyền người Pháp De Lanessan đã ra lệnh đốt những ngôi nhà lá dọc bờ Hồ Gươm. Đến đêm ngày 22/1/1886, hơn 300 ngôi nhà ở khu vực đó đã chạy rụi. Đêm ngày 28 một vụ cháy lớn nữa đã thiêu rụi toàn bộ thôn Cự Lâu thời bấy giờ, khiến chùa Báo Ân chỉ còn lại tàn tích. Mãi đến năm 1888 người Pháp đã phá bỏ phần còn lại của chùa để xây bưu điện, chỉ giữ lại Tháp Hòa Phong ở phía sau chùa như ngày nay.
+Người đứng ra chủ trì xây dựng chùa Báo Ân là Tổng đốc Hà Ninh - Nguyễn Văn Giai, một danh thần với nhiều công lao dưới thời Vua Thiệu Trị. Ông quyên tiền và có công xây dựng chùa với quy mô hoành tráng, biểu tượng cho sự bề thế của Hà Nội thời bấy giờ. Chùa Báo Ân được xây dựng trong một khuôn viên lớn, với kiến trúc độc đáo và đẳng cấp. Trong quá trình lịch sử, nhiều sự kiện đã khiến cho chùa Báo Ân bị phá hủy, một trong số đó là vụ cháy lớn vào tháng 11 năm 1885. Viên Toàn quyền người Pháp đã ra lệnh đốt những ngôi nhà lá dọc bờ Hồ Gươm, gây ra nhiều thiệt hại. Chùa Báo Ân đã bị thiêu rụi trong vụ cháy đó và chỉ còn lại Tháp Hòa Phong. Mặc dù còn sót lại một thời gian, nhưng vào năm 1888, phần còn lại của chùa cũng đã bị phá bỏ để xây dựng bưu điện, chỉ giữ lại Tháp Hòa Phong như ngày nay.
