--- a/static/detail/3/history.txt
+++ b/static/detail/3/history.txt
@@ -1,1 +1,1 @@
-Tràng Tiền Plaza, với lịch sử hình thành từ năm 2000, đã trở thành biểu tượng không thể thiếu của Hà Nội. Nằm ở trái tim của thành phố, nó đã chứng kiến sự biến đổi của đất nước và văn hóa dân tộc. Từ một trung tâm thương mại nhỏ, nó đã phát triển thành điểm đến hàng đầu cho mua sắm, giải trí và gặp gỡ. Những câu chuyện về những thời kỳ huy hoàng và những cột mốc quan trọng của thành phố được kể lại qua những góc nhìn và ký ức tại đây.
+Tràng Tiền Plaza đã trải qua nhiều biến động trước khi trở thành thiên đường mua sắm hiện đại. Vào năm 1808, xưởng đúc tiền Tràng Tiền được lập tại làng Cựu Lâu, huyện Thọ Xương, chuyên đúc tiền kẽm và đồng. Tuy nhiên, vào năm 1882, xưởng này bị thực dân Pháp đóng cửa. Đầu thế kỷ 20, trung tâm thương mại Godard được xây dựng tại địa điểm này, và sau đó đã trải qua nhiều lần đổi tên và sở hữu cho đến khi trở thành Tràng Tiền Plaza vào năm 2003. Dưới sự đầu tư của Tập đoàn Imex Pan Pacific, Tràng Tiền Plaza đã "hồi sinh" thành công và trở thành điểm hội tụ của nhiều thương hiệu thời trang và mua sắm đẳng cấp thế giới.
