--- a/static/detail/4/history.txt
+++ b/static/detail/4/history.txt
@@ -1,1 +1,1 @@
-Nhà tù Hỏa Lò được xây dựng vào năm 1896, ban đầu có tên là Prison Centrale (Nhà tù trung ương), song để tránh sự tò mò và kích động của dân chúng nên đổi thành Maison Centrale (Ngôi nhà Trung ương) và hiện tên vẫn còn trên cánh cổng chính dẫn vào di tích. Nhà tù này được Pháp xây dựng năm 1896 ở khu vực ngoại ô thành phố với mục đích làm ngục thất trung ương cho cả hai xứ Trung cũng như là Bắc Kỳ. Nơi đây giam giữ chủ yếu là các tù nhân chính trị và các nhà ái quốc chống chính quyền thực dân. Giữa lòng thủ đô ồn ào, tấp nập vẫn có một nhà tù Hỏa Lò luôn ở đó và lưu giữ những thăng trầm lịch sử theo thời gian. Được mệnh danh là địa ngục trần gian, trong suốt thời gian hoạt động của mình, nhà tù Hỏa Lò đã trở thành nơi giam giữ của biết bao thế hệ chiến sĩ, nhà hoạt động cách mạng Việt Nam với kiến trúc trại giam được thiết kế với các hình thức tra tấn, ép cung vô cùng dã man, tàn nhẫn. Điển hình nhất là cỗ máy chém đã đưa nhà tù ghi danh vào top 10 nhà tù khét tiếng nhất thế giới.Tổng diện tích của cả khu nhà tù trước kia rộng lên đến hơn 12.000m2. Tuy nhiên, ngày nay chỉ còn 2.434m2 là được giữ lại nhằm bảo tồn để trở thành khu di tích, phục vụ cho mục đích tham quan du lịch của những ai muốn đến và tận mắt chứng kiến khung cảnh của nhà tù thực dân trông như thế nào khi đến khám phá Hà Nội.Cũng do được xây trên đất của làng Phụ Khánh, tổng Vĩnh Xương (cũ) là làng nghề chuyên sản xuất đồ gốm, ngày đêm rực lửa lò nung vì thế làng còn có tên là Hỏa Lò. Dưới thời Pháp thuộc, ngục Hỏa Lò được thiết kế xây dựng với cấu trúc bao gồm những bức tường đá cao 4m, dày 0,5m được gia cố thêm dây thép điện. Cả khu vực ngục tù được chia thành 4 khu A, B, C, D. Trong đó: Khu A, B: Dành cho các phạm nhân đang được điều tra, phạm nhân không quan trọng hoặc phạm nhân vi phạm vào kỉ cương của nhà tù. Khu C: Dành cho tù nhân Pháp hoặc ngoại quốc. Khu D: Dành cho các phạm nhân đang chờ thụ án tử hình
+Nhà tù Hỏa Lò, được xây dựng vào năm 1896, ban đầu có tên là Prison Centrale (Nhà tù trung ương), sau đổi thành Maison Centrale (Ngôi nhà Trung ương) để tránh sự chú ý của dân chúng. Nằm ở ngoại ô thành phố Hà Nội, Hỏa Lò giam giữ chủ yếu các tù nhân chính trị và nhà ái quốc chống thực dân Pháp. Với kiến trúc tra tấn dã man, nhà tù này đã ghi danh vào danh sách những nhà tù khét tiếng nhất thế giới. Ngày nay, chỉ còn một phần nhỏ được bảo tồn để trở thành khu di tích, giữ lại cho mục đích tham quan du lịch. Nhà tù Hỏa Lò được chia thành 4 khu, mỗi khu dành cho một loại tù nhân khác nhau, từ điều tra đến thụ án tử hình.
