--- a/static/detail/7/history.txt
+++ b/static/detail/7/history.txt
@@ -1,1 +1,1 @@
-Hà Nội có con phố khá đặc biệt, không số nhà, tên phố là ngày và tháng của một năm bi thương trong lịch sử chống thực dân xâm lược, đó là phố 19-12. Từ khi thành phố cho mở các quầy sách, người ta gọi đây là “phố sách”. Phố 19-12 nằm giữa một bên là Tòa án Nhân dân tối cao (thời Pháp là Tòa Thượng thẩm) và bên kia là khách sạn Melia (xưa là Trường Kỹ nghệ). Phố dài hơn 100m, bắt đầu từ phố Hai Bà Trưng đến phố Lý Thường Kiệt. Năm 1900, phố có tên là Palais de Justice, năm 1933 đổi thành Paul Simoni. Tháng 12-1945, Thị trưởng Trần Duy Hưng đổi tên phố này thành phố Lê Chân. Tên Lê Chân được giữ nguyên sau lần đổi tên phố năm 1949 và 1951. Với mục đích tái chiếm Hà Nội, trong tháng 12-1946, quân Pháp nhiều lần kiếm cớ gây sự với lực lượng Việt Minh. Đáp lời kêu gọi của Người, tối ngày 19-12-1946, Trung đoàn Thủ đô và Tự vệ Hà Nội đã chủ động nổ súng đánh quân Pháp. Trong chiến đấu, mất mát hy sinh là không tránh khỏi. Ở nhiều chiến lũy, chiến sĩ Trung đoàn Thủ đô, tự vệ thành và người dân chết nhưng không thể lấy được xác. Năm 1981, thành phố đã cho bốc hài cốt mang lên an táng ở nghĩa trang Bất Bạt (nay là nghĩa trang Yên Kỳ, xã Phú Sơn, huyện Ba Vì). Tuy nhiên, do không có con số tiểu đựng xương nên rất khó ước đoán số người chết được di chuyển. Tám năm sau khi công trình hoàn thành, thành phố quyết định mở phố sách. Ngày 30-4-2017, phố sách khai trương, trở thành địa điểm văn hóa của người dân Thủ đô..
+Phố 19-12 ở Hà Nội là một con phố đặc biệt, không có số nhà, mang tên ngày tháng bi thương trong lịch sử chống thực dân. Nằm giữa Tòa án Nhân dân tối cao và khách sạn Melia, phố dài hơn 100m, từ phố Hai Bà Trưng đến Lý Thường Kiệt. Trước đây, phố có tên Palais de Justice, rồi đổi thành Paul Simoni, sau đó là phố Lê Chân. Ngày 19-12-1946, quân Việt Minh chủ động nổ súng chống lại quân Pháp tại đây, gây nhiều hy sinh. Năm 1981, hài cốt các liệt sĩ được chuyển đến nghĩa trang Yên Kỳ. Ngày 30-4-2017, phố sách khai trương, trở thành địa điểm văn hóa quan trọng của Hà Nội.
