--- a/static/detail/8/history.txt
+++ b/static/detail/8/history.txt
@@ -1,1 +1,1 @@
-Vườn hoa Lý Thái Tổ có vị trí sát hồ Hoàn Kiếm nằm giữa các phố Đinh Tiên Hoàng, Lê Lai, Lê Thạch, Ngô Quyền với diện tích 12.153,5m2. Xưa kia là phần đất của chùa Phổ Giác (có người giải thích là nơi phổ cập, giác ngộ Phật pháp cho các phật tử). Bản đồ Hà Nội năm 1873 còn thể hiện rõ mặt bằng chùa và cả khu vực cây xanh ở phía Đông Tả vọng hồ - hồ Hoàn Kiếm ngày nay. Người Pháp khi đánh chiếm thành Hà Nội và được triều Nguyễn (1874) giao cho khu nhượng địa đã có kế hoạch tiến hành cải tạo. Từ năm 1886, sau khi Paul Bert sang nhậm chức Tổng trú sứ đã cùng với chính quyền Hà Nội lúc đó thực hiện chương trình đô thị tại khu vực Đông và Nam hồ Hoàn Kiếm thành khu phố Âu kiểu mẫu đầu tiên. Khi đó đã di dời chùa Phổ Giác về khu vực cuối phố Ngô Sĩ Liên ngày nay để xây dựng Quảng trường (vườn hoa) làm trung tâm và xây dựng xung quanh là tòa đốc lý (vị trí trụ sở UBND TP ngày nay), kho bạc (Ngân hàng Công Thương), Dinh Thống sứ (nay là Nhà khách Chính phủ) và Bưu điện. Trong vườn hoa có cây xanh được nhập ngoại đã thuần hóa, cây cảnh và tượng đài (lúc đầu là tượng thần tự do, đến năm 1889 thay bằng tượng Paul Bert, năm 1945 thị trưởng Trần Văn Lai đã hạ bỏ) và tòa nhà bát giác xây dựng năm 1901 (còn gọi là nhà kèn) làm chỗ để đội kèn nhà binh Pháp biểu diễn. Vườn hoa được đổi tên nhiều lần, lúc đầu mang tên Paul Bert, sau Cách mạng tháng Tám năm 1945 là vườn hoa Chí Linh. Từ năm 1984 mang tên Indira Gandhi (cố Thủ tướng Ấn Độ). Đến năm 2004, khi cải tạo chỉnh trang, có tượng Lý Thái Tổ được gọi là vườn hoa Lý Thái Tổ. Việc cải tạo lại vườn hoa, xây dựng tượng đài Lý Thái Tổ để có diện mạo như ngày nay là cả quá trình minh chứng cho sự quan tâm, sáng tạo của Nhân dân và chính quyền Thủ đô. Ngay từ việc xây dựng tượng đài Lý Thái Tổ đã được thực hiện bài bản, công phu. Nhiều hội thảo khoa học đã đề cập Hà Nội cần có tượng đài Lý Thái Tổ, riêng về vị trí xây dựng có nhiều ý kiến khác nhau. Phải đến tháng 10/2001, Hội đồng tượng đài TP qua phân tích thấu đáo đã thống nhất vị trí hợp lý nhất là ở khu vực vườn hoa Chí Linh với cải tạo đồng bộ cả khu vực. Qua phân tích các yếu tố tác động, ý nghĩa văn hóa, tính thực tiễn đến tháng 6/2002, UBND TP đã có quyết định phê duyệt nhiệm vụ đầu tư xác định rõ yêu cầu về tượng đài, phù điêu, sân hành lễ, sân dạo, cây cảnh...
+Vườn hoa Lý Thái Tổ nằm sát hồ Hoàn Kiếm, giữa các phố Đinh Tiên Hoàng, Lê Lai, Lê Thạch, và Ngô Quyền, diện tích 12.153,5m². Xưa kia là đất chùa Phổ Giác, sau được người Pháp cải tạo thành khu phố kiểu Âu đầu tiên. Vườn hoa có cây xanh, nhà bát giác (nhà kèn) và từng mang nhiều tên: Paul Bert, Chí Linh, Indira Gandhi. Năm 2004, vườn hoa được cải tạo, dựng tượng đài Lý Thái Tổ. Đây là nơi tổ chức nhiều sự kiện văn hóa, lịch sử, và là điểm dạo mát, thư giãn yêu thích của người dân Hà Nội.
