--- a/static/detail/16/history.txt
+++ b/static/detail/16/history.txt
@@ -1,1 +1,1 @@
-Trước là tháp chứa nước ngọt, cái tên Bốt hàng Đậu là do vào thời Pháp thuốc, nơi đây có đặt bốt trông coi lớn. Ở Hà Nội vào khoảng năm 1984, dịch bệnh hoành hành đã đe dọa cuộc sống của cư dân, nghiêm trọng đến mức ngay cả Tổng trú sứ Paul Bert cũng mắc bệnh mà qua đời. Tình hình yêu cầu sự ra đời của ủy ban nước sạch, loại bỏ việc sử dụng các nguồn nước từ tự nhiên như ao, hồ, giếng hay sông, nước mưa… của người Việt. Các nhà máy nước được khẩn trương xây dựng, và tháp nước hàng Đậu ra đời với nhiệm vụ cung cấp nước ngọt. Bởi kiến trúc lớn và từng được binh lính Pháp canh giữ, nhiều người dân tưởng đây là lô cốt nên mới đặt cho nó cái tên Bốt hàng Đậu. Trong khi đó, quân thực dân lại gọi đây là Đài Đầu vì tháp nằm ở đoạn đầu thành phố, thuận tiện để rót thẳng nước vào khu vực đóng quân trong thành Thăng Long. Tháp nước bốt hàng Đậu còn phân phối nước đều đặn về các khu phố giữa Thủ đô, được điều khiển và khống chế bởi các van hãm lớn. Khu vực trong thành hay ở đâu có nhiều người Pháp ở thì van chẳng khi nào đóng, còn đường nước về khu người Việt thì luôn bị hạn chế. 
+Trước đây, tháp nước Hàng Đậu được sử dụng để chứa nước ngọt. Tên gọi "Bốt hàng Đậu" xuất phát từ thời Pháp thuộc, khi nơi này được sử dụng làm bốt trông coi lớn. Vào khoảng năm 1984, dịch bệnh lan rộng, đe dọa cuộc sống của người dân Hà Nội, buộc thành lập ủy ban nước sạch để loại bỏ việc sử dụng các nguồn nước tự nhiên không đảm bảo vệ sinh. Tháp nước Hàng Đậu được xây dựng để cung cấp nước ngọt cho cư dân. Do kiến trúc lớn và từng được binh lính Pháp canh giữ, nhiều người tưởng rằng đây là lô cốt nên đặt cho nó tên "Bốt hàng Đậu". Quân thực dân gọi tháp là "Đài Đầu" vì nằm ở đoạn đầu thành phố, thuận tiện để cung cấp nước cho khu vực đóng quân trong thành Thăng Long. Tháp nước này phân phối nước đều đặn đến các khu phố giữa Thủ đô, được điều khiển bởi các van hãm lớn.
