--- a/static/detail/19/history.txt
+++ b/static/detail/19/history.txt
@@ -1,1 +1,1 @@
-Nằm trên phố Đinh Tiên Hoàng, bên bờ hồ Gươm, Bưu điện Hà Nội là nơi ghi dấu nhiều thăng trầm lịch sử của mảnh đất Hà thành. Ngược dòng thời gian, Sở Bưu điện Hà Nội là một trong những công trình được xây dựng từ khá sớm kể từ khi Hà Nội bắt đầu được quy hoạch và mở rộng với khu vực Hồ Gươm làm trung tâm. Vị trí Sở Bưu điện Hà Nội nằm trên đại lộ Francis Garnier (nay là phố Đinh Tiên Hoàng), vốn là vị trí của chùa Báo Ân. Năm 1888, người Pháp đã phá hủy chùa để xây nhà bưu điện. Dấu tích duy nhất còn lại của chùa Báo Ân là tháp Hòa Phong vẫn tồn tại đến nay, nằm đối diện với bưu điện. Tòa nhà đầu tiên của Sở bưu điện Hà Nội do kiến trúc sư Henri Vildieu thiết kế và xây dựng vào các năm 1893 – 1899 theo phong cách kiến trúc tân cổ điển. Mặt chính của tòa nhà trông ra đại lộ Francis Garnier, mặt bên trông ra phố Chavassieux (phố Lê Thạch ngày nay). Do chật chội và xuống cấp, từ năm 1910 trở đi, tòa nhà đã được tu sửa và mở rộng nhiều lần. Năm 1943, Sở Bưu điện Hà Nội xây dựng thêm một tòa nhà mới nằm ở góc đại lộ Francis-Garnier và phố Fourès (nay là phố Đinh Lễ). Tòa nhà này do kiến trúc sư Henri Cerutti thiết kế. Năm 1976, tòa nhà bưu điện mới được xây dựng, là tòa nhà chính của Bưu điện Hà Nội hiện tại. Công trình được xây dựng theo kiểu kiến trúc hiện đại, có 5 tầng, quy mô bề thế, mặt tiền chạy dọc theo bờ hồ Hoàn Kiếm. Điểm nhấn của công trình là tháp đồng hồ điểm có 4 mặt giống nhau, mỗi mặt vuông cạnh rộng 4,5m vuông. Từ năm 1978, những tiếng chuông của đồng hồ đã chính thức vang lên.
+Bưu điện Hà Nội, nằm bên bờ hồ Gươm, là biểu tượng lịch sử của Thủ đô. Ban đầu là chùa Báo Ân, năm 1888, người Pháp xây dựng nhà bưu điện mới trên địa điểm này. Tháp Hòa Phong là dấu tích duy nhất còn lại của chùa. Tòa nhà đầu tiên do kiến trúc sư Henri Vildieu thiết kế, từ năm 1893 đến 1899, sau đó trải qua nhiều lần tu sửa và mở rộng. Năm 1943, một tòa nhà mới được xây dựng, và năm 1976, tòa nhà chính của bưu điện hiện nay được hoàn thành. Công trình này có kiến trúc hiện đại, cao 5 tầng, với tháp đồng hồ điểm làm điểm nhấn. Từ năm 1978, tiếng chuông của đồng hồ đã chính thức vang lên, tạo nên một không gian đặc biệt bên bờ hồ Hoàn Kiếm.
