--- a/static/detail/5/history.txt
+++ b/static/detail/5/history.txt
@@ -1,1 +1,1 @@
-Cầu Thê Húc với sắc đỏ son nổi bật là điểm tham quan, du lịch không còn xa lạ ở khu vực hồ Hoàn Kiếm, Hà Nội. Cây cầu được làm bằng gỗ, có nhiều trụ liên tiếp và nằm bắc ngang qua hồ nước rộng lớn, nối với hòn đảo nhỏ là nơi tọa lạc của đền Ngọc Sơn. Tên gọi “Thê Húc” của công trình này có nghĩa là “ngưng tụ hào quang” hay “nơi đậu ánh sáng Mặt Trời buổi sáng sớm”. 	Về lịch sử hình thành, vào năm 1865 dưới triều Tự Đức, Nguyễn Văn Siêu cho xây cầu nối giữa bờ bên này của hồ Hoàn Kiếm với bờ bên kia của đền Ngọc Sơn. Trước khi hoàn thành, công trình đã trải qua hai lần tái thiết kế. Lần thứ nhất là vào năm 1865 nhưng dưới triều Thành Thái, lần thứ nhì là vào năm 1952 ở thời thị trưởng Thẩm Hoàng Tín sau khi một nhịp cầu gãy vào đêm Giao thừa do khách đi lễ đền quá đông.
+Cầu Thê Húc, với sắc đỏ nổi bật, là điểm du lịch không thể bỏ qua ở Hồ Hoàn Kiếm, Hà Nội. Được xây bằng gỗ, cầu nối từ bờ hồ này sang đảo của đền Ngọc Sơn. Tên gọi “Thê Húc” có nghĩa là “ngưng tụ hào quang”, hoặc “nơi đậu ánh sáng Mặt Trời buổi sáng sớm”. Năm 1865, Nguyễn Văn Siêu dưới triều Tự Đức cho xây cầu này. Trước khi hoàn thành, cầu trải qua hai lần tái thiết kế, lần cuối vào năm 1952 do sự cố gãy nhịp vào đêm Giao thừa.
